Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/Cuota_Financiamiento__c.object-meta.xml
<CustomObject>
    <label>Cuota Financiamiento</label>
    <nameField>
        <displayFormat>Cuot-{00000000}</displayFormat>
        <label>Nombre de Cuota Financiamiento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuotas Financiamiento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>