Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Codigo_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Proyecto__c</fullName>
    <label>Código Proyecto</label>
    <length>5</length>
    <type>Text</type>
</CustomField>