Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Enviado_a_Tesoreria__c.field-meta.xml
<CustomField>
    <fullName>Enviado_a_Tesoreria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado a Tesorería</label>
    <type>Checkbox</type>
</CustomField>