Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Es_Personalizado__c.field-meta.xml
<CustomField>
    <fullName>Es_Personalizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Personalizado</label>
    <type>Checkbox</type>
</CustomField>