Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Es_Personalizado_Cuota_Original__c.field-meta.xml
<CustomField>
    <fullName>Es_Personalizado_Cuota_Original__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Personalizado Cuota Original</label>
    <type>Checkbox</type>
</CustomField>