Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Es_Personalizado_Eliminacion__c.field-meta.xml
<CustomField>
    <fullName>Es_Personalizado_Eliminacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Personalizado Eliminacion</label>
    <type>Checkbox</type>
</CustomField>