Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Estado_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Pago__c</fullName>
    <label>Estado de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <default>true</default>
                <label>C</label>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>