Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Estado_Recepcion__c.field-meta.xml
<CustomField>
    <fullName>Estado_Recepcion__c</fullName>
    <label>Estado Recepcion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>