Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Fecha_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cobro__c</fullName>
    <label>Fecha Cobro</label>
    <type>Date</type>
</CustomField>