Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Fecha_Consolida__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Consolida__c</fullName>
    <label>Fecha Consolida</label>
    <type>Date</type>
</CustomField>