Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Fecha_Recepcion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Recepcion__c</fullName>
    <label>Fecha Recepcion</label>
    <type>Date</type>
</CustomField>