Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Fecha_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Saldo__c</fullName>
    <label>Fecha Saldo</label>
    <type>Date</type>
</CustomField>