Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financiamiento</label>
    <referenceTo>Financiamiento__c</referenceTo>
    <relationshipLabel>Cuotas Financiamiento</relationshipLabel>
    <relationshipName>Cuotas_Financiamiento</relationshipName>
    <type>Lookup</type>
</CustomField>