Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Interes__c.field-meta.xml
<CustomField>
    <fullName>Interes__c</fullName>
    <label>Interes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>