Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Monto_Pago__c.field-meta.xml
<CustomField>
    <fullName>Monto_Pago__c</fullName>
    <label>Monto Pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>