Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Monto_sin_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Monto_sin_Descuento__c</fullName>
    <label>Monto sin Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>