Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Mostrar_Reporte__c.field-meta.xml
<CustomField>
    <fullName>Mostrar_Reporte__c</fullName>
    <label>Mostrar Reporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>