Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Numero_Anulacion_Cobro_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Numero_Anulacion_Cobro_Adicional__c</fullName>
    <label>Numero Anulacion Cobro Adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>