Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Numero_Dividendo__c.field-meta.xml
<CustomField>
    <fullName>Numero_Dividendo__c</fullName>
    <label>Numero Dividendo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>