Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Recepcion_Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Recepcion_Ubicacion__c</fullName>
    <label>Recepcion Ubicacion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>