Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Recepcion_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Recepcion_Usuario__c</fullName>
    <label>Recepcion Usuario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>