Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Valor_Interes_Implicito__c.field-meta.xml
<CustomField>
    <fullName>Valor_Interes_Implicito__c</fullName>
    <label>Valor Interes Implicitos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>