Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Valor_Mora__c.field-meta.xml
<CustomField>
    <fullName>Valor_Mora__c</fullName>
    <label>Valor Mora</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>