Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/valor_mora_saldo__c.field-meta.xml
<CustomField>
    <fullName>valor_mora_saldo__c</fullName>
    <label>valor mora saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>