Inmob-Salesforce/force-app/main/default/objects/Cuota_Financiamiento__c/fields/Valor_Presente__c.field-meta.xml
<CustomField>
    <fullName>Valor_Presente__c</fullName>
    <label>Valor Presente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>